--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Vacuum Pump Calculator</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no"> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -112,7 +115,7 @@
                 </div>
             </div>
             
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-4">
                 <label for="pumpSpeed">Velocity of flow of gas through the inlet:</label>
                 <div class="input-group">
                     <input type="number" class="form-control" id="pumpSpeed">
@@ -180,3 +183,4 @@
         </div>
     </div>
 </body>
+</html>
